policies/governance/bundles/psp-v2022/psp-flexvolume-drivers.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPFlexVolumes
metadata:
  name: psp-v2022-psp-flexvolume-drivers
  labels:
    policycontroller.gke.io/bundleName: psp-v2022
  annotations:
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/bundles/psp-v2022',
        bundleVersion: '202305.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Anthos Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNASSIGNED',
        description: 'Controls the allowlist of FlexVolume drivers. Corresponds to the `allowedFlexVolumes` field in PodSecurityPolicy.',
        remediation: 'You can use only Pod FlexVolume drivers listed in the `allowedFlexVolumes` field. Use a different driver or customize the field.',
        minimumTemplateLibraryVersion: '1.10.1'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  # K8sPSPFlexVolumes documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spspflexvolumes
  #parameters: {}
  #     allowedFlexVolumes: #[]
  #       - driver: "example/lvm"
  #       - driver: "example/cifs"
